// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PsammeadBulletedList should render correctly from ltr 1`] = `
.c0 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin-top: 0;
  list-style-type: none;
}

.c0 > li::before {
  content: ' ';
  padding-left: 1.75rem;
  background: url('data:image/svg+xml,%3Csvg%20height%3D%2710%27%20width%3D%2710%27%20xmlns%3D%27http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%27%3E%3Cstyle%3E%40media%20screen%20and%20%28-ms-high-contrast%3A%20active%29%7Bsvg%7Bfill%3A%20%23fff%7D%7D%3C%2Fstyle%3E%3Ccircle%20cx%3D%275%27%20cy%3D%275%27%20r%3D%273%27%3E%3C%2Fcircle%3E%3C%2Fsvg%3E') no-repeat center;
  margin-left: -2rem;
}

.c1 {
  margin-bottom: 1rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

<ul
  class="c0"
  dir="ltr"
  role="list"
>
  <li
    class="c1"
    role="listitem"
  >
    First item on the list
  </li>
  <li
    class="c1"
    role="listitem"
  >
    Second item on the list
  </li>
  <li
    class="c1"
    role="listitem"
  >
    Final list item
  </li>
</ul>
`;

exports[`PsammeadBulletedList should render correctly from rtl 1`] = `
.c0 {
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin-top: 0;
  list-style-type: none;
}

.c0 > li::before {
  content: ' ';
  padding-left: 1.75rem;
  background: url('data:image/svg+xml,%3Csvg%20height%3D%2710%27%20width%3D%2710%27%20xmlns%3D%27http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%27%3E%3Cstyle%3E%40media%20screen%20and%20%28-ms-high-contrast%3A%20active%29%7Bsvg%7Bfill%3A%20%23fff%7D%7D%3C%2Fstyle%3E%3Ccircle%20cx%3D%275%27%20cy%3D%275%27%20r%3D%273%27%3E%3C%2Fcircle%3E%3C%2Fsvg%3E') no-repeat center;
  margin-right: -2rem;
}

.c1 {
  margin-bottom: 1rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

<ul
  class="c0"
  dir="rtl"
  role="list"
>
  <li
    class="c1"
    role="listitem"
  >
    العنصر الأول في القائمة
  </li>
  <li
    class="c1"
    role="listitem"
  >
    البند الثاني في القائمة
  </li>
  <li
    class="c1"
    role="listitem"
  >
    عنصر القائمة النهائية
  </li>
</ul>
`;
